fix style and index files

--- a/index.html
+++ b/index.html
@@ -29,9 +29,10 @@
 	<div class="randomNum"></div>
 
 	<div class="winlose">			
-		<span id= "win"></span>
-		</br> 
-		<span id= "lose"></span>
+		<ul>
+		<li id="win"></li>
+		<li id="lose"></li>		
+		</ul> 
 	</div>
 
 
